updated index to clean code

--- a/index.html
+++ b/index.html
@@ -35,58 +35,13 @@
         </header>
         <main>
           <div class="background-image"></div>
-          <div class="current-weather" id="belfast">
+          <div class="current-weather" id="current-weather">
             <div class="city-details">
-              <h1 class="current-city">Belfast</h1>
-              <p class="current-details">
-                Saturday 15:32, moderate rain <br />
-                Humidity: <strong>87%</strong>, Wind: <strong>7.2km/h</strong>
-              </p>
+              <h1 class="current-city"></h1>
+              <p class="current-details"></p>
               <div class="current-temperature">
                 <span class="current-temperature-icon">☀️</span>
-                <span class="current-temperature-value">21</span>
-                <span class="current-temperature-unit">°C</span>
-              </div>
-            </div>
-          </div>
-          <div class="current-weather" id="sydney" style="display: none">
-            <div class="city-details">
-              <h1 class="current-city">Sydney</h1>
-              <p class="current-details">
-                Saturday 15:32, moderate rain <br />
-                Humidity: <strong>87%</strong>, Wind: <strong>7.2km/h</strong>
-              </p>
-              <div class="current-temperature">
-                <span class="current-temperature-icon">☀️</span>
-                <span class="current-temperature-value">31</span>
-                <span class="current-temperature-unit">°C</span>
-              </div>
-            </div>
-          </div>
-          <div class="current-weather" id="paris" style="display: none">
-            <div class="city-details">
-              <h1 class="current-city">Paris</h1>
-              <p class="current-details">
-                Saturday 15:32, moderate rain <br />
-                Humidity: <strong>87%</strong>, Wind: <strong>7.2km/h</strong>
-              </p>
-              <div class="current-temperature">
-                <span class="current-temperature-icon">☀️</span>
-                <span class="current-temperature-value">10</span>
-                <span class="current-temperature-unit">°C</span>
-              </div>
-            </div>
-          </div>
-          <div class="current-weather" id="berlin" style="display: none">
-            <div class="city-details">
-              <h1 class="current-city">Berlin</h1>
-              <p class="current-details">
-                Saturday 15:32, moderate rain <br />
-                Humidity: <strong>87%</strong>, Wind: <strong>7.2km/h</strong>
-              </p>
-              <div class="current-temperature">
-                <span class="current-temperature-icon">☀️</span>
-                <span class="current-temperature-value">-2</span>
+                <span class="current-temperature-value"></span>
                 <span class="current-temperature-unit">°C</span>
               </div>
             </div>
@@ -108,39 +63,59 @@
     </div>
     <script>
       function displayForecast(data) {
-        const forecastSection = document.querySelector(".forecast-section");
         const forecastContainer = document.querySelector(".forecast-container");
-
         forecastContainer.innerHTML = "";
-
-        forecastSection.style.display = "block";
-
         for (let i = 0; i < data.list.length; i += 8) {
           const forecast = data.list[i];
           const forecastCard = document.createElement("div");
           forecastCard.classList.add("forecast-card");
-
           const date = new Date(forecast.dt * 1000);
           const day = date.toLocaleDateString("en-US", { weekday: "short" });
           const temperature = Math.round(forecast.main.temp);
-
           forecastCard.innerHTML = `
-      <p class="forecast-day">${day}</p>
-      <div class="forecast-details">
-        <span class="forecast-icon">☀️</span>
-        <span class="forecast-temperature">${temperature}°C</span>
-      </div>
-    `;
-
+            <p class="forecast-day">${day}</p>
+            <div class="forecast-details">
+              <span class="forecast-icon">☀️</span>
+              <span class="forecast-temperature">${temperature}°C</span>
+            </div>
+          `;
           forecastContainer.appendChild(forecastCard);
         }
       }
+
+      function displayCurrentWeather(data) {
+        const currentWeatherElement =
+          document.querySelector("#current-weather");
+        const cityElement =
+          currentWeatherElement.querySelector(".current-city");
+        const detailsElement =
+          currentWeatherElement.querySelector(".current-details");
+        const temperatureIconElement = currentWeatherElement.querySelector(
+          ".current-temperature-icon"
+        );
+        const temperatureValueElement = currentWeatherElement.querySelector(
+          ".current-temperature-value"
+        );
+        const temperatureUnitElement = currentWeatherElement.querySelector(
+          ".current-temperature-unit"
+        );
+
+        cityElement.textContent = data.name;
+        detailsElement.innerHTML = `${new Date().toLocaleString()}, ${
+          data.weather[0].description
+        } <br /> Humidity: <strong>${
+          data.main.humidity
+        }%</strong>, Wind: <strong>${data.wind.speed}m/s</strong>`;
+        temperatureIconElement.textContent = "☀️";
+        temperatureValueElement.textContent = Math.round(data.main.temp);
+        temperatureUnitElement.textContent = "°C";
+
+        currentWeatherElement.style.display = "flex";
+      }
+
       const apiKey = "8f59873f1aa9095582ac6328f58ef24b";
 
       document.addEventListener("DOMContentLoaded", () => {
-        const forecastSection = document.querySelector(".forecast-section");
-        forecastSection.style.display = "none";
-
         const form = document.querySelector("form");
         form.addEventListener("submit", async (e) => {
           e.preventDefault();
@@ -160,10 +135,7 @@
               const forecastData = await forecastResponse.json();
 
               displayCurrentWeather(currentWeatherData);
-
               displayForecast(forecastData);
-
-              forecastSection.style.display = "block";
             } catch (error) {
               console.error("Error fetching weather data:", error);
             }
