--- a/index.html
+++ b/index.html
@@ -117,9 +117,10 @@
 
       document.addEventListener("DOMContentLoaded", () => {
         const form = document.querySelector("form");
+        const input = document.querySelector(".search-input");
+
         form.addEventListener("submit", async (e) => {
           e.preventDefault();
-          const input = document.querySelector(".search-input");
           const cityName = input.value.trim();
 
           if (cityName !== "") {
@@ -136,6 +137,10 @@
 
               displayCurrentWeather(currentWeatherData);
               displayForecast(forecastData);
+
+              // Reset the input field and keep the form in focus
+              input.value = "";
+              input.focus();
             } catch (error) {
               console.error("Error fetching weather data:", error);
             }
