--- a/index.html
+++ b/index.html
@@ -11,16 +11,7 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <style>
-      .forecast-container {
-        display: flex;
-        justify-content: space-between;
-      }
-
-      .forecast-card {
-        flex: 0 0 18%;
-      }
-    </style>
+    <link rel="stylesheet" href="mystyle.css" />
   </head>
   <body>
     <div class="weather-container">
