--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="mystyle.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="weather-container">
@@ -128,9 +128,61 @@
 
       const apiKey = "8f59873f1aa9095582ac6328f58ef24b";
 
-      document.addEventListener("DOMContentLoaded", () => {
+      document.addEventListener("DOMContentLoaded", async () => {
         const form = document.querySelector("form");
         const input = document.querySelector(".search-input");
+        input.placeholder = "Enter a city...";
+
+        form.addEventListener("submit", async (e) => {
+          e.preventDefault();
+          const cityName = input.value.trim();
+
+          if (cityName !== "") {
+            try {
+              const currentWeatherResponse = await fetch(
+                `https://api.openweathermap.org/data/2.5/weather?q=${cityName}&units=metric&appid=${apiKey}`
+              );
+              const currentWeatherData = await currentWeatherResponse.json();
+
+              const forecastResponse = await fetch(
+                `https://api.openweathermap.org/data/2.5/forecast?q=${cityName}&units=metric&appid=${apiKey}`
+              );
+              const forecastData = await forecastResponse.json();
+
+              displayCurrentWeather(currentWeatherData);
+              displayForecast(forecastData);
+
+              input.value = "";
+              input.focus();
+            } catch (error) {
+              console.error("Error fetching weather data:", error);
+            }
+          }
+        });
+      });
+      document.addEventListener("DOMContentLoaded", async () => {
+        const form = document.querySelector("form");
+        const input = document.querySelector(".search-input");
+
+        const defaultCity = "Belfast";
+        input.value = defaultCity;
+
+        try {
+          const currentWeatherResponse = await fetch(
+            `https://api.openweathermap.org/data/2.5/weather?q=${defaultCity}&units=metric&appid=${apiKey}`
+          );
+          const currentWeatherData = await currentWeatherResponse.json();
+
+          const forecastResponse = await fetch(
+            `https://api.openweathermap.org/data/2.5/forecast?q=${defaultCity}&units=metric&appid=${apiKey}`
+          );
+          const forecastData = await forecastResponse.json();
+
+          displayCurrentWeather(currentWeatherData);
+          displayForecast(forecastData);
+        } catch (error) {
+          console.error("Error fetching weather data:", error);
+        }
 
         form.addEventListener("submit", async (e) => {
           e.preventDefault();
