--- a/index.html
+++ b/index.html
@@ -55,7 +55,12 @@
           <p>
             This project was coded by
             <a href="#" target="_blank">Louise</a> and is
-            <a href="#" target="_blank">on GitHub</a> and
+            <a
+              href="https://github.com/Macklou/weather-app-project"
+              target="_blank"
+              >on GitHub</a
+            >
+            and
             <a href="#" target="_blank">hosted on Netlify</a>
           </p>
         </footer>
@@ -131,41 +136,7 @@
       document.addEventListener("DOMContentLoaded", async () => {
         const form = document.querySelector("form");
         const input = document.querySelector(".search-input");
-        input.placeholder = "Enter a city...";
-
-        form.addEventListener("submit", async (e) => {
-          e.preventDefault();
-          const cityName = input.value.trim();
-
-          if (cityName !== "") {
-            try {
-              const currentWeatherResponse = await fetch(
-                `https://api.openweathermap.org/data/2.5/weather?q=${cityName}&units=metric&appid=${apiKey}`
-              );
-              const currentWeatherData = await currentWeatherResponse.json();
-
-              const forecastResponse = await fetch(
-                `https://api.openweathermap.org/data/2.5/forecast?q=${cityName}&units=metric&appid=${apiKey}`
-              );
-              const forecastData = await forecastResponse.json();
-
-              displayCurrentWeather(currentWeatherData);
-              displayForecast(forecastData);
-
-              input.value = "";
-              input.focus();
-            } catch (error) {
-              console.error("Error fetching weather data:", error);
-            }
-          }
-        });
-      });
-      document.addEventListener("DOMContentLoaded", async () => {
-        const form = document.querySelector("form");
-        const input = document.querySelector(".search-input");
-
         const defaultCity = "Belfast";
-        input.value = defaultCity;
 
         try {
           const currentWeatherResponse = await fetch(
@@ -183,6 +154,8 @@
         } catch (error) {
           console.error("Error fetching weather data:", error);
         }
+
+        input.placeholder = "Enter a city...";
 
         form.addEventListener("submit", async (e) => {
           e.preventDefault();
