--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
               >on GitHub</a
             >
             and
-            <a href="#" target="_blank">hosted on Netlify</a>
+            <a href="https://cute-chebakia-327d33.netlify.app" target="_blank"
+              >hosted on Netlify</a
+            >
           </p>
         </footer>
       </div>
